Bug 1704503 - Send the root content APZC's overscroll transform to WebRender as part of the zoom container's transform, not the APZC's scroll offset. r=tnikkel, a=pascalc

This makes the handling of the overscroll transform consistent
with non-WebRender, including that it will now apply to content
fixed to the root.

Depends on D112877

Differential Revision: https://phabricator.services.mozilla.com/D112878